# brew-rs

./: Cargo.toml  config.toml  docker-compose.yml
crates/brew-types/: Cargo.toml
crates/brew-types/src/: sign_up.rs
crates/brew-types/src/auth/: common.rs  login.rs  mod.rs  sign_up.rs
crates/realm/: Cargo.toml
crates/realm/src/: config.rs  context.rs  lib.rs
crates/realm/src/auth/: login.rs  mod.rs  password.rs  sign_up.rs
crates/realm/src/auth/login/: login_token.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  server.rs
crates/service/: Cargo.toml
crates/service/src/auth/: login.rs  mod.rs  sign_up.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 14122025_users_table.sql  21122025_alter_users_datetime.sql
crates/storage/src/: config.rs  database.rs  db_migrator.rs  lib.rs
crates/storage/src/users/: mod.rs
