[package]
name = "realm"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { workspace = true }
jwt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres"] }

# Local dependencies
brew-types = { workspace = true }
storage = { workspace = true }
