[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["http2"] }
jwt = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Local dependencies
realm = { workspace = true }
brew-types = { workspace = true }
